# Team-3-Project-5122

./: README.md  analysis_cenpy.ipynb  analysis_census.ipynb  analysis_census.py  pyproject.toml  streamlit_app.py
Team_3_Project/: README.md  analysis_census.py  pyproject.toml  streamlit_app.py
Team_3_Project/src/: technical_proof.ipynb
Team_3_Project/src/team_3_project/: __init__.py  ai_insights.py  fiber_analysis.py
src/team_3_project/: fiber_analysis.py
